# timezoned

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  notes.txt  ogrinfo.sh  timezoned.ini
data/: Makefile.am
man/: Makefile.am  generate.sh  gettz.asciidoc  timezoned.asciidoc
src/: Makefile  Makefile.am  configuration.c  configuration.h  gettz.c  log.c  log.h  logging.c  logging.h  timezoned.c  tz_finder_location.c  tz_finder_location.h  tz_system_utils.c  tz_system_utils.h
src/iniparser/: README
